--- a/pages/login.html
+++ b/pages/login.html
@@ -37,43 +37,45 @@
     document.getElementById('loginForm').addEventListener('submit', async function (e) {
         e.preventDefault();
 
-        const button = document.getElementById('loginButton');
-        button.disabled = true;
-        button.textContent = 'Entrando...';
+        window.location.href = 'biblioteca.html';
+        
+        // const button = document.getElementById('loginButton');
+        // button.disabled = true;
+        // button.textContent = 'Entrando...';
 
-        const formData = {
-            email: document.getElementById('email').value,
-            password: document.getElementById('senha').value
-        };
+        // const formData = {
+        //     email: document.getElementById('email').value,
+        //     password: document.getElementById('senha').value
+        // };
 
-        try {
-            const response = await fetch('http://127.0.0.1:8000/api/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(formData)
-            });
+        // try {
+        //     const response = await fetch('http://127.0.0.1:8000/api/login', {
+        //         method: 'POST',
+        //         headers: {
+        //             'Content-Type': 'application/json'
+        //         },
+        //         body: JSON.stringify(formData)
+        //     });
 
-            const data = await response.json();
+        //     const data = await response.json();
 
-            console.log(data);
-            // return;
+        //     console.log(data);
+        //     // return;
 
-            if (response.ok) {
-                console.log(data);
-                localStorage.setItem('token', data.token);
-                window.location.href = 'biblioteca.html';
-            } else {
-                alert(data.message || 'Email ou senha inválidos.');
-            }
+        //     if (response.ok) {
+        //         console.log(data);
+        //         localStorage.setItem('token', data.token);
+        //         window.location.href = 'biblioteca.html';
+        //     } else {
+        //         alert(data.message || 'Email ou senha inválidos.');
+        //     }
 
-        } catch (error) {
-            console.error('Erro no login:', error);
-            alert('Erro inesperado. Tente novamente mais tarde.');
-        } finally {
-            button.disabled = false;
-            button.textContent = 'Entrar';
-        }
+        // } catch (error) {
+        //     console.error('Erro no login:', error);
+        //     alert('Erro inesperado. Tente novamente mais tarde.');
+        // } finally {
+        //     button.disabled = false;
+        //     button.textContent = 'Entrar';
+        // }
     });
 </script>
